--- a/forms/style.css
+++ b/forms/style.css
@@ -2,4 +2,121 @@
   font-family: Norse;
   src: url(fonts/Norse-Bold.otf);
 }
+
+html {
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+body {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr 2fr;
+      grid-template-columns: 1fr 2fr;
+  margin: 0;
+  height: 600px;
+  background-color: #f5f6f8;
+}
+
+h1, h2 {
+  margin-top: 0;
+}
+
+aside {
+  background-image: url(img/aside.jpg);
+  background-size: cover;
+  color: white;
+  position: relative;
+}
+
+aside > section {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  background-color: #00000067;
+  position: absolute;
+  top: 20%;
+  width: 100%;
+  font-family: Norse;
+  font-size: 5rem;
+}
+
+aside > section > img {
+  width: 80px;
+}
+
+aside > footer {
+  position: absolute;
+  bottom: 0px;
+  text-align: center;
+  width: 100%;
+}
+
+button {
+  background-color: #596D48;
+  color: white;
+  padding: 10px 20px;
+  border-radius: 8px;
+  border: none;
+  font-weight: bold;
+}
+
+input {
+  border-color: #E5E7EB;
+}
+
+input:focus {
+  border: blue;
+}
+
+input.error {
+  border-color: red;
+}
+
+article {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  height: 100%;
+}
+
+article > section {
+  padding: 30px;
+}
+
+.form-leader {
+  font-weight: bold;
+}
+
+section.form {
+  background-color: white;
+  -webkit-box-shadow: 0px 6px 4px #E5E7EB;
+          box-shadow: 0px 6px 4px #E5E7EB;
+}
+
+form {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr 1fr;
+      grid-template-columns: 1fr 1fr;
+  gap: 20px 40px;
+}
+
+form label {
+  font-size: 0.75rem;
+  font-weight: bold;
+  letter-spacing: 0.1rem;
+}
 /*# sourceMappingURL=style.css.map */
