--- a/forms/style.scss
+++ b/forms/style.scss
@@ -2,3 +2,95 @@
     font-family: Norse;
     src: url(fonts/Norse-Bold.otf);
 }
+
+html {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+body {
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+    margin: 0;
+    height: 600px;
+    background-color: #f5f6f8;
+}
+
+h1, h2 {
+    margin-top: 0;
+}
+
+aside {
+    background-image: url(img/aside.jpg);
+    background-size: cover;
+    color: white;
+    position: relative;
+    > section {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        background-color: #00000067;
+        position: absolute;
+        top: 20%;
+        width: 100%;
+        font-family: Norse;
+        font-size: 5rem;
+        > img {
+            width: 80px;
+        }
+    }
+    > footer {
+        position: absolute;
+        bottom: 0px;
+        text-align: center;
+        width: 100%;
+    }
+}
+
+button {
+    background-color: #596D48;
+    color: white;
+    padding: 10px 20px;
+    border-radius: 8px;
+    border: none;
+    font-weight: bold;
+}
+
+input {
+    border-color: #E5E7EB;
+    &:focus {
+        border: blue;
+    }
+    &.error {
+        border-color: red;
+    }
+}
+
+article {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    height: 100%;
+    > section {
+        padding: 30px;
+    }
+}
+
+.form-leader {
+    font-weight: bold;
+}
+
+section.form {
+    background-color: white;
+    box-shadow: 0px 6px 4px #E5E7EB;
+}
+
+form {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 20px 40px;
+    label {
+        font-size: 0.75rem;
+        font-weight: bold;
+        letter-spacing: 0.1rem;
+    }
+}
